# autofill

./: Cargo.toml  README.md
autofill-examples/: Cargo.toml  timer-state.csv
autofill-examples/src/: adveture_game.rs  main.rs  time_tracking_cli_app.rs
autofill-macro/: Cargo.toml
autofill-macro/src/: lib.rs  llm_completion.rs  macro_input.rs  prompt_cache.rs  test.rs
