[package]
name = "autofill"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "LLM-powered code completion proc macro"

[lib]
proc-macro = true

[dependencies]
reqwest = { version = "0.11", features = ["blocking", "json"] }
proc-macro2 = { version = "1.0", features = ["span-locations"] }
syn.workspace = true
quote.workspace = true
serde.workspace = true
serde_json.workspace = true
rustc_version.workspace = true
thiserror.workspace = true

[dev-dependencies]
trybuild.workspace = true
tempfile.workspace = true
